# opengl-wrapper

./: CMakeLists.txt  README.md  main.cpp
lib/: cmake_install.cmake
src/: app.cpp  app.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  shapes.h  texture.cpp  texture.h
